--- a/client/index.css
+++ b/client/index.css
@@ -136,3 +136,32 @@ ul {
     font-weight: 100;
     font-size: 50%;
 }
+
+.room-container {
+    border-radius: 15px;
+    background-color: #7289DA;
+    text-align: center;
+    margin: 2% 30% 5% 30%;
+    border: 3px solid white;
+    width: 40%;
+    height: 80%;
+}
+
+.room-item {
+    padding: 15px;
+    text-align: center;
+}
+
+.room-item a:link, a:visited {
+    border-radius: 5px;
+    color: white;
+    border: 2px solid white;
+    padding: 10px 25%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.room-item a:hover, a:active {
+    background-color: rgb(255, 255, 255, 0.2);
+}
