--- a/client/index.css
+++ b/client/index.css
@@ -148,20 +148,27 @@ ul {
 }
 
 .room-item {
-    padding: 15px;
+    padding: 2% 2%;
     text-align: center;
-}
-
-.room-item a:link, a:visited {
+    display: inline-block;
     border-radius: 5px;
     color: white;
     border: 2px solid white;
-    padding: 10px 25%;
-    text-align: center;
+    width: 90%;
+}
+
+.room-item a:link, a:visited {
     text-decoration: none;
-    display: inline-block;
 }
 
 .room-item a:hover, a:active {
     background-color: rgb(255, 255, 255, 0.2);
+}
+
+.left-side {
+    float: left;
+}
+
+.right-side {
+    float: right;
 }
